Fixed a few minor bugs
git-svn-id: http://chianti.ucsd.edu/svn@20673 0ecc0d97-ab19-0410-9704-bfe1a75892f5